--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Bai Lab @ LSU"
 title_separator          : "-"
 name                     : &name "Xiaojian Bai"
 description              : &description "personal description"
-url                      : https://xiaojianbai.github.io/homepage/ #https://academicpages.github.io 
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : "https://xiaojianbai.github.io" #https://academicpages.github.io 
+baseurl                  : "/homepage" # the subpath of your site, e.g. "/blog"
 repository               : "XiaojianBai/homepage"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
